--- a/index.html
+++ b/index.html
@@ -3,49 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NinioTeam</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0f0f0f;
-      color: #ffffff;
-      text-align: center;
-    }
-
-    header {
-      background-color: #111;
-      padding: 1rem;
-      border-bottom: 2px solid #00ff88;
-    }
-
-    nav a {
-      color: #00ff88;
-      text-decoration: none;
-      margin: 0 10px;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 2rem;
-    }
-
-    footer {
-      margin-top: 2rem;
-      padding: 1rem;
-      border-top: 1px solid #333;
-      color: #888;
-      font-size: 0.9rem;
-    }
-  </style>
+  <title>ninioteam</title>
 </head>
 <body>
   <header>
-    <h1>Welcome to NinioTeam</h1>
     <nav>
       <a href="#">Home</a>
       <a href="#">Projects</a>
@@ -54,13 +15,11 @@
   </header>
 
   <main>
-    <h2>Hello World!</h2>
-    <p>This is your new GitHub Pages website.</p>
-    <p>You can edit this file (<code>index.html</code>) to add your own content.</p>
+    <p>hi</p>
   </main>
 
   <footer>
-    © 2025 NinioTeam — All rights reserved.
+    © 2025 ninioteam — All rights reserved.
   </footer>
 </body>
 </html>
